css/index.css
/* ... */
.case {width: 95%; max-width: 1100px; height: calc(100% - 200px); top: 50px; background-color: #ececec; background-size: contain; overflow: auto;}
.artboard img {  margin: 0% 1% 1% 0%;}

.caption {font-family: 'GreycliffCF-ThinOblique', sans-serif; text-align: center; margin: 1% 0px 100px 0px; font-size: 1rem; }
.artboard_bottom {margin-top: 100px; margin-bottom: 50px;}
.artboard_bottom p {text-align: center; padding: 0px 30px 0px 30px} 
.artboard_button {width: 50%; background: #2f335c !important; color: white; border: none; padding: 15px; margin-top: 7%; margin-bottom: 20px;}
.artboard_button a{color: white!important; text-decoration: none; }
.artboard_button:hover {background-color: #384272!important; cursor: pointer;}
.bob_motu img {width: 50%; vertical-align: middle;}
.artboard_navigation {width: 100%; height: 50px; display: flex; justify-content: center;}
.case_nav_button h6 {color: black !important; font-size: 1rem; }
.case_nav_button h6:hover {color: gray!important;}
.artboard_column {float: left; width: 100%; }
.artboard_columnthird {float: left; right: 0; margin: 0px 25px 50px 0px; width: 100%;}
.artboard_columntwothird {float: left; right: 0; margin: 0px; width: 100%;}
.artboard_columnfifty {float: left; right: 0; margin: 0px; width: 100%;}
#overlap_tlgs_img { transform: translateX(0px)}
#tlgs_section_h3 {margin: 0px 0px 50px 0px}
#tlgs_section_h3 h3 {margin-top: 25px;}
.artboard_columnthird p {margin-top: 0px; margin-bottom: 0px;}
.artboard a {font-family: 'GreycliffCF-DemiBold', sans-serif; color: black; font-size: 1rem;  }
.artboard a:hover {color: gray;  }
.wf_poster {display: table-cell; vertical-align: middle; padding-right: 1%;}
.wf_poster img {max-width: 100%;}
.wf_tri_poster_container {display: table; width: 100%; white-space: nowrap; height: 100px;}

@media screen and (min-width: 1100px ) {
  .artboard_columnthird{ width: 30%; margin-right: 2%; }
  .artboard_columntwothird {right: 0; width: 66%;} 
  #overlap_tlgs_img { transform: translateX(-50px)}
  .artboard_columnfifty {float: left; right: 0; margin: 0px; width: 50%;}
  .caption {text-align: left;}
  #tlgs_section_h3 {margin: 0px 0px 50px 50px}
  #tlgs_section_h3 h3 {margin-top: 0px;}

}

@media screen and (min-width: 800px ) {
  .artboard_columnfifty {float: left; right: 0; margin: 0px; width: 50%;}
  .tlgs_flex_text {margin-left: 25px;}
  
}




@media screen and (min-width: 1000px) {
  .artboard_response_row {display: -ms-flexbox; /* IE10 */ display: flex; -ms-flex-wrap: wrap; /* IE10 */ flex-wrap: wrap; padding: 0 4px;}
  .artboard_response_column {-ms-flex: 50%; /* IE10 */ flex: 50%; max-width: 50%; padding-right: 1%}
  .artboard_response_column img {margin: 2% 2% 0% 0%; vertical-align: middle; width: 100%;}

   
}

/* MOBILE QUERY  */

.mobile_reveal {display: none;}

@media screen and (max-width: 500px) {
  /* .page-wrapper {height: 100vh;} */
  body {overflow-y: hidden; width: 100vw; height: 100vh;}
  .window {top: 50px; left: 2px; width: 100vw;}
 #logo {max-width: 325px !important; width: 35%;}
  #finder_window {height: calc(100% - 150px);  top: 40px; }
  #finder_carousel {display: none;}
  .artboard {padding: 30px 25px;}
  .case {width: 98%; height: calc(100% - 142px); top: 42px;}
  h1 {font-size: 36px;}
  h3 {font-size: 24px;}
  .mobile_hide {display: none;}
  .mobile_icon_container {display: block !important;}
  #tlgs_footer {margin-top: 25px;}
  .slide_caption_wrapper {bottom: 15px; width: 90%;}
  .slide_image {height: 70%; width: auto; display: flex; justify-content: middle;}
  .slideshow_btn {height: calc(100% - 100px); top: 20px;}
  .about_content {margin: 0px; width: 100%; }
  #about_window { top: 45px; height: calc(100% - 150px);  }
  #about_window h1 {font-size: 18px !important; line-height: 22px;}
  .about_section {margin: 15px; }
  #mobile_dock_container {display: block !important;}
  .window {top: 40px;}
  #photo_viewer{ top: 65px !important;}
  #mobile_wifi {display: block; float: right;}
  .mobile_column {padding-left: 0!important;}
  #about_window {width: 100%; height: 100%;max-height: calc(100vh - 150px);}
  .about_content {overflow-y: scroll!important;}
#about_window h1 {font-size: 1.25em !important; line-height: 1em; }
  .photo_frame img{max-height:250px;}
  .photo_carousel {bottom: -5px;}
  .about_col_left, .about_col_right {width: 90%; margin: 30px 20px; height: auto; overflow-x: hidden; overflow-y: scroll;}
  .about_col_left img {margin-top: 35px;}
  .about_section {width: 100%;}
  .photo_frame img{max-height:700px; height:80%; width:100%; object-fit:cover;}
  
}


@keyframes type {0% {width: 0;} 99.9% {border-right: .15em solid #c6cADF;} 100% {border: none;}}
@keyframes type2 {0% {width: 0;} 1% {opacity: 1;} 99.9% {border-right: .15em solid #c6cADF;} 100% {opacity: 1; border: none;}}
@keyframes blink {50% {border-color: transparent;}}
@-webkit-keyframes blink {50% {border-color: tranparent;}}
@keyframes typing {from { width: 0;}to {width: 100%;}}
@-webkit-keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
.fade-out{-webkit-animation:fade-out .25s ease-out both;animation:fade-out .25s ease-out both}
@-webkit-keyframes fade-out{0%{opacity:1}100%{opacity:0}}@keyframes fade-out{0%{opacity:1}100%{opacity:0}}
.fade-in{-webkit-animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both;animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both}
@-webkit-keyframes fade-in{0%{opacity:0.5}25%{opacity:0.62}50%{opacity:0.74} 75% {opacity:0.86}100%{opacity:1}}@keyframes fade-in{0%{opacity:0.5}25%{opacity:0.62}50%{opacity:0.74} 75% {opacity:0.86}100%{opacity:1}}
/* ... */

